--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "antd": "^4.15.4",
     "axios": "^0.21.1",
     "cogo-toast": "^4.2.3",
+    "draft-js": "^0.11.7",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
@@ -55,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-draft-wysiwyg": "^1.13.2",
     "@types/react-helmet": "^6.1.1",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
