--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -57,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-draft-wysiwyg": "^1.13.2",
     "@types/react-helmet": "^6.1.1",
     "@types/react-redux": "^7.1.16",
