--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ docker build:
   only:
     refs:
       - develop
+      - uat
   variables:
     DOCKER_FILE: Dockerfile
     SERVICE_NAME: yody-app-admin
@@ -46,6 +47,22 @@ deploy to dev:
     HOST: dev.app-admin.yody.io
     NAMESPACE: dev
     ENVIRONMENT: dev
+    SERVICE_NAME: yody-app-admin
+    DOCKER_IMAGE_NAME: yody-app-admin
+  script:
+    - bash deployment/deploy.sh app-admin
+
+deploy to uat:
+  stage: deploy
+  image: public.ecr.aws/d7d0w7j6/aws-deployer:1.4
+  dependencies: []
+  when: manual
+  only:
+    - uat
+  variables:
+    HOST: uat.app-admin.yody.io
+    NAMESPACE: uat
+    ENVIRONMENT: uat
     SERVICE_NAME: yody-app-admin
     DOCKER_IMAGE_NAME: yody-app-admin
   script:
