--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:testing": "dotenv -e .env.development react-scripts build",
+    "build:uat": "dotenv -e .env.uat react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
