--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-drag-listview": "^0.1.8",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-quill": "^1.3.5",
