add alias config for nginx

--- a/nginx-conf/default.conf
+++ b/nginx-conf/default.conf
@@ -6,6 +6,11 @@ server {
        index  index.html index.htm index.js;
        try_files $uri $uri/ /index.html;
    }
+   location /unicorn/admin {
+      alias   /usr/share/nginx/html;
+      index  index.html index.htm index.js;
+      try_files $uri $uri/ /index.html;
+   }
    error_page   500 502 503 504  /50x.html;
    location = /50x.html {
        root   /usr/share/nginx/html;
