--- a/nginx-conf/default.conf
+++ b/nginx-conf/default.conf
@@ -6,10 +6,10 @@ server {
        index  index.html index.htm index.js;
        try_files $uri $uri/ /index.html;
    }
-   location /unicorn/admin {
-      alias   /usr/share/nginx/html;
-      index  index.html index.htm index.js;
-      try_files $uri $uri/ /index.html;
+   location /unicorn/admin/ {
+       alias   /usr/share/nginx/html/;
+       index   index.html index.htm index.js;
+       try_files $uri $uri/ /index.html;
    }
    error_page   500 502 503 504  /50x.html;
    location = /50x.html {
