--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yody-app-admin",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./unicorn/admin",
+  "homepage": "https://dev.yody.io/unicorn/admin",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@testing-library/jest-dom": "^5.11.4",
