--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ cache:
     - .npm/
 
 variables:
-  SERVICE_PATH: /unicorn/admin
+#  SERVICE_PATH: /unicorn/admin
   IMAGE_TAG: $CI_COMMIT_SHORT_SHA
 
 stages:
