--- a/.env.development
+++ b/.env.development
@@ -9,4 +9,5 @@ REACT_APP_ACCOUNTS_SERVICE=account-service
 REACT_APP_ORDER_SERVICE=order-service
 REACT_APP_CUSTOMER_SERVICE=customer-service
 REACT_APP_AUTH_SERVICE=auth-service
+REACT_APP_PURCHASE_ORDER_SERVICE=purchase-order-service
 
