--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.11",
     "antd": "^4.15.4",
     "axios": "^0.21.1",
     "cogo-toast": "^4.2.3",
@@ -30,6 +31,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.0",
     "typed-redux-saga": "^1.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
