--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-drag-listview": "^0.1.8",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-number-format": "^4.6.4",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
