--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": "https://dev.yody.io/unicorn/admin",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@ckeditor/ckeditor5-build-classic": "^29.1.0",
+    "@ckeditor/ckeditor5-react": "^3.0.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
