--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "homepage": "https://dev.yody.io/unicorn/admin",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
-    "@ckeditor/ckeditor5-build-classic": "^29.1.0",
-    "@ckeditor/ckeditor5-react": "^3.0.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -18,6 +16,7 @@
     "@types/styled-components": "^5.1.11",
     "antd": "^4.15.4",
     "axios": "^0.21.1",
+    "ckeditor4-react": "^2.0.1",
     "cogo-toast": "^4.2.3",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
