--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-to-print": "^2.13.0",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0",
