--- a/.env.uat
+++ b/.env.uat
@@ -10,4 +10,5 @@ REACT_APP_ORDER_SERVICE=order-service
 REACT_APP_CUSTOMER_SERVICE=customer-service
 REACT_APP_AUTH_SERVICE=auth-service
 REACT_APP_PURCHASE_ORDER_SERVICE=purchase-order-service
+REACT_APP_IMPORT_EXPORT_SERVICE=import-export-service
 
