--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "ckeditor4-react": "^2.0.1",
     "cogo-toast": "^4.2.3",
+    "html-react-parser": "^1.2.8",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
