--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "ckeditor4-react": "^2.0.1",
     "cogo-toast": "^4.2.3",
     "html-react-parser": "^1.2.8",
+    "html2canvas": "^1.3.2",
     "install": "^0.13.0",
+    "jspdf": "^2.3.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
