--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,8 +10,11 @@
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "cSpell.words": [
+        "antd",
         "Ghtk",
+        "hàng",
+        "nháp",
         "Sachkho",
-        "antd"
+        "trên"
     ]
 }
