--- a/.env.development
+++ b/.env.development
@@ -12,4 +12,5 @@ REACT_APP_AUTH_SERVICE=auth-service
 REACT_APP_PURCHASE_ORDER_SERVICE=purchase-order-service
 REACT_APP_PURCHASE_ORDER_SERVICE=purchase-order-service
 REACT_APP_IMPORT_EXPORT_SERVICE=import-export-service
+REACT_APP_INVENTORY_SERVICE=inventory-service
 
