--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 REACT_APP_PRODUCTION=false
-REACT_APP_BASE_URL=https://dev.api.yody.io/unicorn/
+REACT_APP_BASE_URL=https://dev-new.api.yody.io/unicorn/
 REACT_APP_TIME_OUT=200000
 
 REACT_APP_CONTENT_SERVICE=content-service
