--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "ckeditor4-react": "^2.0.1",
     "cogo-toast": "^4.2.3",
+    "dompurify": "^2.3.1",
     "html-react-parser": "^1.2.8",
     "html2canvas": "^1.3.2",
     "install": "^0.13.0",
@@ -72,6 +73,7 @@
     ]
   },
   "devDependencies": {
+    "@types/dompurify": "^2.2.3",
     "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-helmet": "^6.1.1",
     "@types/react-redux": "^7.1.16",
