--- a/.env.development
+++ b/.env.development
@@ -14,3 +14,4 @@ REACT_APP_PURCHASE_ORDER_SERVICE=purchase-order-service
 REACT_APP_IMPORT_EXPORT_SERVICE=import-export-service
 REACT_APP_INVENTORY_SERVICE=inventory-service
 REACT_APP_LOYALTY_SERVICE=loyalty-service
+REACT_APP_ECOMMERCE_SERVICE=ecommerce
