--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-slick": "^0.23.5",
     "@types/styled-components": "^5.1.11",
     "antd": "^4.15.4",
     "axios": "^0.21.1",
@@ -38,9 +39,11 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "react-to-print": "^2.13.0",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
     "typed-redux-saga": "^1.3.1",
     "typescript": "^4.1.2",
