--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,20 @@ stages:
   - tag
   - notify
 
+verify code:
+  stage: verify
+  image: public.ecr.aws/d7d0w7j6/aws-deployer:1.4
+  only:
+    refs:
+      - develop
+  variables:
+    DOCKER_FILE: Dockerfile
+    SERVICE_NAME: yody-app-admin
+    DOCKER_IMAGE_NAME: yody-app-admin
+  script:
+    - node_modules/eslint/bin/eslint.js .
+
+
 docker build:
   stage: docker_build
   image: public.ecr.aws/d7d0w7j6/aws-deployer:1.4
