--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ckeditor4-react": "^2.0.1",
     "cogo-toast": "^4.2.3",
     "dompurify": "^2.3.1",
+    "eslint": "^7.32.0",
     "html-react-parser": "^1.2.8",
     "html2canvas": "^1.3.2",
     "install": "^0.13.0",
