--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-sticky": "^6.0.3",
     "react-to-print": "^2.13.0",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
@@ -82,6 +83,7 @@
     "@types/react-helmet": "^6.1.1",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-sticky": "^6.0.4",
     "@types/redux-saga": "^0.10.5",
     "babel-plugin-module-resolver": "^4.1.0",
     "dotenv-cli": "^4.0.0",
