--- a/deployment/k8s/dev/app-admin/main.dev.yml
+++ b/deployment/k8s/dev/app-admin/main.dev.yml
@@ -22,6 +22,10 @@ spec:
       containers:
         - name: $SERVICE_NAME
           image: $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$IMAGE_TAG
+          resources:
+            limits:
+              memory: "100Mi"
+              cpu: "0.1"
           imagePullPolicy: Always
           ports:
             - name: http
