--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ docker build:
     SERVICE_NAME: yody-app-admin
     DOCKER_IMAGE_NAME: yody-app-admin
   script:
-    - bash deployment/dockerbuild.sh
+    - sh deployment/dockerbuild.sh
 
 deploy to dev:
   stage: deploy
