cai tien danh sach cha

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,8 @@
         "Sachkho",
         "trên",
         "variantdefault"
-    ]
+    ],
+    "[source.css.styled]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
