--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 REACT_APP_PRODUCTION=false
-REACT_APP_BASE_URL=https://dev.api.yody.io/api
+REACT_APP_BASE_URL=https://uat.api.yody.io/api
 REACT_APP_TIME_OUT=200000
