--- a/.env.development
+++ b/.env.development
@@ -15,3 +15,4 @@ REACT_APP_INVENTORY_SERVICE=inventory-service
 REACT_APP_INVENTORY_TRANSFER_SERVICE=inventory-transfer-service
 REACT_APP_LOYALTY_SERVICE=loyalty-service
 REACT_APP_ECOMMERCE_SERVICE=ecommerce-service
+REACT_APP_LOGISTIC_GATEWAY_SERVICE=logistic-gateway-service
