--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,12 @@
 {
-    "editor.defaultFormatter": "vscode.typescript-language-features",
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
     "[typescriptreact]": {
-        "editor.defaultFormatter": "vscode.typescript-language-features"
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "[typescript]": {
-        "editor.defaultFormatter": "vscode.typescript-language-features"
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "[scss]": {
-        "editor.defaultFormatter": "vscode.typescript-language-features"
-    },
-    "cSpell.words": [
-        "antd",
-        "Ghtk",
-        "hàng",
-        "nháp",
-        "Sachkho",
-        "trên",
-        "variantdefault"
-    ],
-    "[source.css.styled]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
-    }
+    },
 }
