--- a/deployment/k8s/dev/app-admin/config.dev.yml
+++ b/deployment/k8s/dev/app-admin/config.dev.yml
@@ -3,9 +3,9 @@ kind: ConfigMap
 metadata:
   name: $SERVICE_NAME
 data:
-  REACT_APP_PRODUCTION: false
+  REACT_APP_PRODUCTION: "false"
   REACT_APP_BASE_URL: https://dev.api.yody.io/unicorn/
-  REACT_APP_TIME_OUT: 20000
+  REACT_APP_TIME_OUT: "20000"
   REACT_APP_CONTENT_SERVICE: content-service
   REACT_APP_PRODUCT_SERVICE: product-service
   REACT_APP_CORE_SERVICE: core-service
