--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:testing": "dotenv -e .env.development react-scripts build",
-    "build:uat": "dotenv -e .env.uat react-scripts build",
+    "build:testing": "react-scripts build",
+    "build:uat": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
