--- a/deployment/k8s/dev/app-admin/main.dev.yml
+++ b/deployment/k8s/dev/app-admin/main.dev.yml
@@ -21,6 +21,9 @@ spec:
       containers:
         - name: $SERVICE_NAME
           image: $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$IMAGE_TAG
+          envFrom:
+          - configMapRef:
+              name: $SERVICE_NAME
           resources:
             limits:
               memory: "100Mi"
