--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "npm": "^7.20.5",
-    "query-string": "^7.0.1",
     "react": "^17.0.2",
-    "react-countdown": "^2.3.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-drag-listview": "^0.1.8",
@@ -43,7 +41,6 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
-    "react-sticky": "^6.0.3",
     "react-to-print": "^2.13.0",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
@@ -56,8 +53,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:testing": "react-scripts build",
-    "build:uat": "react-scripts build",
+    "build:testing": "dotenv -e .env.development react-scripts build",
+    "build:uat": "dotenv -e .env.uat react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -85,11 +82,9 @@
     "@types/react-helmet": "^6.1.1",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
-    "@types/react-sticky": "^6.0.4",
     "@types/redux-saga": "^0.10.5",
     "babel-plugin-module-resolver": "^4.1.0",
     "dotenv-cli": "^4.0.0",
-    "prettier": "2.4.1",
     "redux-devtools-extension": "^2.13.9"
   }
 }
