--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yody-app-admin",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dev.yody.io/unicorn/admin",
+  "homepage": ".",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -29,7 +29,9 @@
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "npm": "^7.20.5",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
+    "react-countdown": "^2.3.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-drag-listview": "^0.1.8",
@@ -55,6 +57,7 @@
     "build": "react-scripts build",
     "build:testing": "dotenv -e .env.development react-scripts build",
     "build:uat": "dotenv -e .env.uat react-scripts build",
+    "build:production": "dotenv -e .env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
