--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 REACT_APP_PRODUCTION=false
-REACT_APP_BASE_URL=https://dev.api.yody.io/unicorn/
+REACT_APP_BASE_URL=https://api.yody.io/unicorn/
 REACT_APP_TIME_OUT=200000
 
 REACT_APP_CONTENT_SERVICE=content-service
@@ -17,3 +17,4 @@ REACT_APP_LOYALTY_SERVICE=loyalty-service
 REACT_APP_ECOMMERCE_SERVICE=ecommerce-service
 REACT_APP_LOGISTIC_GATEWAY_SERVICE=logistic-gateway-service
 REACT_APP_INVENTORY_ADJUSTMENT_SERVICE=inventory-adjustment-service
+REACT_APP_PROMOTIONS_ENTITLEMENTS_TEMPLATE_URL=https://yody-file.s3.ap-southeast-1.amazonaws.com/promotions/entitlements_template.xlsx
