--- a/Dockerfile-uat
+++ b/Dockerfile-uat
@@ -3,6 +3,7 @@ FROM node:11 as builder
 WORKDIR /app
 COPY package.json /app
 RUN npm install
+RUN export NODE_OPTIONS="--max-old-space-size=8000"
 COPY . /app
 RUN npm run build:uat
 
