--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "npm": "^7.20.5",
+    "powerbi-client-react": "^1.3.3",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
