--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ckeditor4-react": "^2.0.1",
     "cogo-toast": "^4.2.3",
     "dompurify": "^2.3.1",
+    "env-cmd": "^10.1.0",
     "eslint": "^7.32.0",
     "html-react-parser": "^1.2.8",
     "html2canvas": "^1.3.2",
@@ -55,6 +56,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:uat": "env-cmd -f .env.uat react-scripts start",
     "build": "react-scripts build",
     "build:testing": "dotenv -e .env.development react-scripts build",
     "build:uat": "dotenv -e .env.uat react-scripts build",
