--- a/deployment/k8s/uat/app-admin/main.uat.yml
+++ b/deployment/k8s/uat/app-admin/main.uat.yml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: $SERVICE_NAME
-          image: $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$IMAGE_TAG
+          image: $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$PREFIX-$IMAGE_TAG
           resources:
             limits:
               memory: "500Mi"
